fixed default spacing value for gridlayout
svn changeset:6002/svn branch:trunk

--- a/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
+++ b/WebContent/ITMILL/themes/default/gridlayout/gridlayout.css
@@ -16,7 +16,7 @@
  * Spacing values used by IGridLayout. (element does not exist in DOM)
  * Use padding-left for horizontal spacing and padding-top for vertical.
  */
-.i-gridlayout-spacing-element {
+.i-gridlayout-spacing {
 	padding-left:8px;
 	padding-top:8px;
 }
